# picklerpc

./: .flake8  LICENSE  PickleRpcClient.py  PickleRpcServer.py  __init__.py  pyproject.toml  pytest.ini  readme.md
picklerpc/: __init__.py  client.py  server.py
tests/: test_picklerpc.py
