[tool.poetry]
name = "picklerpc"
version = "1.0"
description = "A remote procedure call library that uses Pickle and TCP sockets."
authors = ["Josh Schneider <josh.schneider@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.278"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
respect-gitignore = true
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PGH", # pygrep-hooks
    "PL", # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff specific
]

[tool.ruff.per-file-ignores]
"test_*.py" = [
    "S101", # Ummm... you should use assert in unit tests
]

[tool.ruff.pydocstyle]
convention = "google"